improve search engine functions

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
         After playing Battle Nations in it's first form I have been waiting for something like this.
         Now I have the knowledge to make it myself. <br>
         The tracker tracks the units u own and have ranked.<br>
+        The import/export buttons are only for this tracker from the game, unfortunately.<br>
         If you run into any issues or have feature requests goto:<a
             href="https://github.com/feddevanderlist/battlenations-unit-tracker/issues"
             data-testid="github-issues-link">
