--- a/src/index.html
+++ b/src/index.html
@@ -158,7 +158,10 @@
                         Current Version</a>
                 </div>
             </div>
-
+            <div class="col s2">
+                <label for="username">Username</label>
+                <input class="input-field" type="text" id="username" name="username" placeholder="Username" data-testid="username"/>
+            </div>
             <div class="row" data-testid="counts-row">
                 <div class="col s2" data-testid="ranked-done-count-wrapper">
                     <div class="card-panel grey lighten-4">
@@ -187,12 +190,12 @@
                         </span>
                     </div>
                 </div>
-                <div class="col s6 right-align" data-testid="clear-buttons-wrapper">
+
+                <div class="col s4 right-align" data-testid="clear-buttons-wrapper">
                     <button class="btn red lighten-2" id="clear-filters" data-testid="clear-filters-btn">Clear Filters
                     </button>
                     <button class="btn grey darken-3" id="clear-all" data-testid="clear-all-btn">Clear All</button>
                 </div>
-
             </div>
         </div>
 
