--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Battle Nations Unit Tracker">
     <meta property="og:description" content="Track your Battle Nations units by rank, ownership, and more.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourusername.github.io/your-repo">
-    <meta property="og:image" content="https://yourusername.github.io/your-repo/thumbnail.png"> <!-- optional -->
+    <meta property="og:url" content="https://github.com/fietser97/battlenations-unit-tracker">
+    <meta property="og:image" content="https://github.com/fietser97/battlenations-unit-tracker/thumbnail.png"> <!-- optional -->
 
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.5.0/css/responsive.dataTables.min.css"/>
     <!-- Materialize CSS -->
@@ -44,9 +44,9 @@
         The tracker tracks the units u own and have ranked.<br>
         The import/export buttons are only for this tracker from the game, unfortunately.<br>
         If you run into any issues or have feature requests goto:<a
-            href="https://github.com/feddevanderlist/battlenations-unit-tracker/issues"
+            href="https://github.com/fietser97/battlenations-unit-tracker/issues"
             data-testid="github-issues-link">
-        https://github.com/feddevanderlist/battlenations-unit-tracker/issues</a>
+        https://github.com/fietser97/battlenations-unit-tracker/issues</a>
     </div>
     <div class="row" data-testid="main-row">
         <div class="col s12 right-align" data-testid="import-export-buttons">
