--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 <div class="container-fluid" data-testid="container">
 
-    <h4 class="center-align" data-testid="page-title">Battle Nations Unit Tracker</h4>
+    <h4 class="center-align" data-testid="page-title" id="banner-header" >Battle Nations Unit Tracker</h4>
     <div class="right-align" data-testid="theme-toggle-wrapper">
         <div class="switch col s12">
             <label>
